LayoutTests:

Reviewed by Maciej.

        - test for http://bugs.webkit.org/show_bug.cgi?id=11974
        REGRESSION: Caret drawn over input when smaller than font size on initial focus
        <rdar://problem/4960258>

        * fast/forms/textfield-overflow-expected.checksum: Added.
        * fast/forms/textfield-overflow-expected.png: Added.
        * fast/forms/textfield-overflow-expected.txt: Added.
        * fast/forms/textfield-overflow.html: Added.

WebCore:

        Reviewed by Maciej.

        - fix http://bugs.webkit.org/show_bug.cgi?id=11974
        REGRESSION: Caret drawn over input when smaller than font size on initial focus
        <rdar://problem/4960258>

        Set controlClip for non-search text controls.

        * rendering/RenderTextControl.h:
        (WebCore::RenderTextControl::hasControlClip):



Canonical link: https://commits.webkit.org/16501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19626 268f45cc-cd09-0410-ab3c-d52691b4dbfc